Add flag for initial block download complete, key still synchronizing, and key needs backup.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,7 @@ add_library( bitcoin STATIC SHARED
              src/daemon.cpp
              src/forks.cpp
              src/info.cpp
+             src/peer.cpp
              src/interpreter.cpp
              src/key.cpp
              src/mem_pool.cpp
